--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+	margin: 0;
+}
 #npowerlogo {
 	width:30%;
 	height:30%;
@@ -18,15 +21,27 @@
 #toparea{
   display: inherit;
   background:skyblue;
+	justify-content:flex-end;
+	border: 1px solid red;
 }
-#header{
-    width: 80%;
+header{
+	margin:0;
 	background:skyblue;
+	justify-content:flex-start;
+	border: 1px solid black;	
+}
+header a {
+	padding: 0px;
+	margin: 0px;
+	
 }
 #socialMedia{
-  
+	display:inherit;
+	margin:50px;
   border: 1px solid black;
-  float:right;
+  justify-content:flex-end;
+  flex-direction:row;
+  
 }
 
 /*------------------------Navigation Section-------------------------*/
@@ -37,6 +52,7 @@ nav{
 	flex-direction: row;
 	padding: 10px;
 	background:skyblue;
+	justify-content:flex-end;
 }
 
 ul{
