--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
+background{
+	
+	background:white
+	width:400px
+	height:400px;		
+}
+
 body {
 	margin: 0;
-}
+	width:100px;
+	height:100px
+	background:white
+     }
 #npowerlogo {
 
 }
