--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,94 @@
-background{
-	
-	background:white
-	width:1000px
-	height:1000px;		
-}
-
 body {
+	height: 100%;
 	margin: 0;
-	width:500px;
-	height:500px
-	background:white
-	border: 3px solid black;
-     }
-#npowerlogo {
-
 }
-#container{
- /*Making it into a flexbox*/
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: column;
-}
-
-/*Contains the NPower logo (header) and social media*/
 #toparea{
 	display: inherit;
-	background:skyblue;
-	flex-direction: row;
-	justify-content: space-between; /*puts space inbetween the socialmedia links and the npower logo*/
-	border: 1px solid red;
-}
-header{
-	
-	
-	margin:0px;
-	background:skyblue;
-
-	border: 1px solid black;	
-}
-header a{
-	padding: 0px;
-	
-	
-}
-
-/*----------------------Social Media Links-------------------------*/	
+	justify-content: space-between;
+	border: 1px solid blue;
+	flex-wrap: wrap;
 }
 #socialMedia{
-	display:inherit;
-	justify-content: flex-end;
-	border: 10px solid green;
-  
-
-  
-}
-
-/*------------------------Navigation Section-------------------------*/
-nav{
-	margin: 0;
-	margin-top:0px;
-	display: inherit;
+	border: 1px solid blue;
 	
-	flex-direction: row;
-	padding: 10px;
-	background:skyblue;
-	justify-content:flex-end;
 }
+#container{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	border: 1px solid blue;
+	
+}
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #3e8e41;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #f1f1f1}
+
+.show {display:block;}
+
 
 ul{
   /*Makes it a flexchild*/
-    	display:  inherit;
+    display:  inherit;
+	
 	flex-wrap: wrap;
 	overflow: hidden;
 	list-style-type: none;
+	
 	flex-direction: row;
 	background:skyblue;
-	
+  
 }
 
 
@@ -101,85 +111,28 @@ li a:active{
 li a:link{
   color:black;
 }
-
-/*---------------------------Banner Section---------------------------*/
-#banner{
+section{
+	border: 1px solid blue;
 	display: inherit;
-	height: 300px;
-	font-size: 100px;
-	border: 1px solid black;
-	width:  100%;
+	flex: 1 auto;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	padding-top: 2em;
+}
+article img{
+	
+	border: 1px solid blue;
+	border-radius: 50%;
+	
+	
+}
+#content{
+	border: 1px solid blue;
+	width: 60%
 }
 
-
-#bannerpic{
-background: url(../images/banner.png);
-	  position: absolute;
-	  width: 500px;
-	  height: 438px;
-	  margin: -25px;
-	  left: 130px;
-	  top: 42px;
-	  -ms-transform: rotate(2deg);
-	  -webkit-transform: rotate(2deg);
-	  transform: rotate(2deg);
-}
-
-
-
-
-
-/*----------------------------------Main Section--------------------*/
-article{
-	display: inherit;
-	margin: 3% 10%
-}
 footer{
-	padding: 20px;
-	border: 1px solid black;
-	margin-left: -9px;
-	margin-right: -9px;
-	background:skyblue;
+	flex: 1;
+	border: 1px solid blue;
 }
-
-#footertext {
-	left: 58px;
-	height:20px; 
-	width:300px;
-}
-
-
-
-#texta {
-	position: absolute;
-	top: 0px;
-	left: 20px;
-	width: 500px;
-	-ms-transform: rotate(0deg);
-	-webkit-transform: rotate(0deg);
-	transform: rotate(0deg);
-}
-
-
-
-
-
-
-
-
-
-
-/*------------Width of screen is less than 900px it will have these properties---------*/
-@media screen and (max-width: 900px)  {
-  ul { 
-  flex-direction: column;
-  width: 100%;
-  padding: 0px;
-  border: 0px;
-  }
-  #toparea{
-    flex-direction: column;
-  }
-}
-
-/* npowerblue #37b8eb*/
