--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,16 @@
+/*------------------Body Section------------------*/
 body {
 	height: 100%;
 	margin: 0;
 }
+/*----------------Container Section---------------*/
+#container{
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	border: 1px solid blue;
+}
+/*-------------------Top Area---------------------*/
 #toparea{
 	display: inherit;
 	justify-content: space-between;
@@ -12,13 +21,8 @@ body {
 	border: 1px solid blue;
 	
 }
-#container{
-	display: flex;
-	flex-direction: column;
-	min-height: 100vh;
-	border: 1px solid blue;
 	
-}
+/*---------------Navigation Section----------------*/
 .dropbtn {
     background-color: #4CAF50;
     color: white;
@@ -111,6 +115,7 @@ li a:active{
 li a:link{
   color:black;
 }
+/*--------------Main Section-------------------*/
 section{
 	border: 1px solid blue;
 	display: inherit;
@@ -127,12 +132,12 @@ article img{
 	
 	
 }
+/*---------------Content Area-----------------*/
 #content{
 	border: 1px solid blue;
 	width: 60%
 }
-
+/*--------------Footer Section----------------*/
 footer{
-	flex: 1;
 	border: 1px solid blue;
 }
