--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,7 @@ section{
 	justify-content: space-between;
 	align-items: center;
 	justify-content: center;
+	margin: 0% 10%;
 }
 #banner img{
 	border-radius: 50%;
