--- a/css/style.css
+++ b/css/style.css
@@ -153,3 +153,28 @@ footer{
 	flex-direction: row;
 	justify-content: space-between;
 }
+/*-------------------images---------------------*/
+/* 	sponsor1
+	sponsor2
+	sponsor3
+	sponsor4
+	sponsor5
+	sponsor6
+	sponsor7
+	sponsor8
+	sponsor9
+	sponsor10
+	sponsor11*/
+/*------------Media icon---------*/
+/*twitter icon
+  youtube icon2
+  tumblr  icon
+  facebook icon
+  LinkedInicon
+*/
+
+
+
+
+
+*/
