--- a/css/style.css
+++ b/css/style.css
@@ -29,64 +29,70 @@ body {
 }
 	
 /*---------------Navigation Section----------------*/
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+@media screen and (max-width: 1050px){/*this setting is for my screen*/
+	#horizontalNav{
+		display: none; 
+	}
+	.dropbtn {
+		background-color: #4CAF50;
+		color: white;
+		padding: 16px;
+		font-size: 16px;
+		border: none;
+		cursor: pointer;
+		
+	}
 
-/* Dropdown button on hover & focus */
-.dropbtn: hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
+	/* Dropdown button on hover & focus */
+	.dropbtn: hover, .dropbtn:focus {
+		background-color: #3e8e41;
+	}
 
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
+	/* The container <div> - needed to position the dropdown content */
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
 
-.dropbtn {
-    background-color: #37b8eb;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+	.dropbtn {
+		background-color: #37b8eb;
+		color: white;
+		padding: 16px;
+		font-size: 16px;
+		border: none;
+		cursor: pointer;
+	}
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #37b8eb;
-}
+	.dropbtn:hover, .dropbtn:focus {
+		background-color: #37b8eb;
+	}
 
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
 
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
+	.dropdown-content {
+		display: none;
+		position: absolute;
+		background-color: #f9f9f9;
+		min-width: 160px;
+		overflow: auto;
+		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	}
 
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
+	.dropdown-content a {
+		color: black;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+	}
 
-.dropdown a:hover {background-color: #f1f1f1}
+	.dropdown a:hover {background-color: #f1f1f1}
 
-.dropdown:hover .dropdown-content {
-    display: block;
+	.dropdown:hover .dropdown-content {
+		display: block;
+	}
 }
 
 
