--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,8 @@ body {
 /*----------------Container Section---------------*/
 #container{
 	display: flex;
+    display: -ms-flex;
+    display: -webkit-flex;
 	flex-direction: column;
 	/*vh is the viewport which is the browser window size*/
 	/*this makes the container 100% of the window*/
@@ -20,70 +22,19 @@ body {
 	justify-content: space-between;
 	flex-wrap: wrap;
 	background: skyblue;
+    padding: 0% 10%
 }
 #socialMedia{
 	
 }
 	
 /*---------------Navigation Section----------------*/
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
+.dropdown{
+	display:none;
 }
-
-/* Dropdown button on hover & focus */
-.dropbtn: hover, .dropbtn:focus {
-    background-color: #3e8e41;
+#horizontalNav{
+	
 }
-
-/* The container <div> - needed to position the dropdown content */
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-.dropbtn:hover, .dropbtn:focus {
-    background-color: #3e8e41;
-}
-
-.dropdown {
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    overflow: auto;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown a:hover {background-color: #f1f1f1}
-
-.show {display:block;}
-
 
 ul{
   /*Makes it a flexchild*/
@@ -97,16 +48,20 @@ ul{
 	background:skyblue;
   
 }
-
+li{
+	display:inline;
+	margin-left:5%;
+}
 
 li a{
  	text-decoration: none;
 	display: inherit;
     padding: 15px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     list-style-type:  none;
 	text-align: center;
 	background:skyblue;
+	
 }
 
 li a:hover{
@@ -118,34 +73,275 @@ li a:active{
 li a:link{
   color:black;
 }
-/*--------------Main Section-------------------*/
-section{
-	display: inherit;
-	flex: 1;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
-	justify-content: center;
-}
-#banner img{
-	border-radius: 50%;
+
+@media screen and (max-width: 1050px){/*this setting is for my screen*/
+	#horizontalNav{
+		display: none; 
+	}
+	.dropbtn {
+		background-color: #4CAF50;
+		color: white;
+		padding: 16px;
+		font-size: 16px;
+		border: none;
+		cursor: pointer;
 		
+	}
+
+	/* Dropdown button on hover & focus */
+	.dropbtn: hover, .dropbtn:focus {
+		background-color: #3e8e41;
+	}
+
+	/* The container <div> - needed to position the dropdown content */
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
+
+	.dropbtn {
+		background-color: #37b8eb;
+		color: white;
+		padding: 16px;
+		font-size: 16px;
+		border: none;
+		cursor: pointer;
+	}
+
+	.dropbtn:hover, .dropbtn:focus {
+		background-color: #37b8eb;
+	}
+
+	.dropdown {
+		position: relative;
+		display: inline-block;
+	}
+
+	.dropdown-content {
+		display: none;
+		position: absolute;
+		background-color: #f9f9f9;
+		min-width: 160px;
+		overflow: auto;
+		box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+	}
+
+	.dropdown-content a {
+		color: black;
+		padding: 12px 16px;
+		text-decoration: none;
+		display: block;
+	}
+
+	.dropdown a:hover {background-color: #f1f1f1}
+
+	.dropdown:hover .dropdown-content {
+		display: block;
+	}
+}
+/*--------------Main Section-------------------*/
+
+
+#banner {
+  position:relative;
+  height:281px;
+  width:450px;
+  margin:0 auto;
+}
+
+#banner img {
+  position:absolute;
+  border-radius: 50%;
+  left:0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+/*Timing for the actual fades
+*These percentages are used to start the fading early because it's supposed to last for 12s
+*/
+@keyframes bannerFadeInOut {
+  0% {
+    opacity:1;
+  }
+  17% {
+    opacity:1;
+  }
+  25% {
+    opacity:0;
+  }
+  92% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+/*Controls the timing for all the fades, perfectly aligned for 4 images*/
+#banner img:nth-of-type(1) {
+  animation-delay: 9s;
+  animation-name: bannerFadeInOut;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+animation-duration: 12s;
+}
+#banner img:nth-of-type(2) {
+  animation-delay: 6s;
+  animation-name: bannerFadeInOut;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+animation-duration: 12s;
+}
+#banner img:nth-of-type(3) {
+  animation-delay: 3s;
+  animation-name: bannerFadeInOut;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+animation-duration: 12s;
+}
+#banner img:nth-of-type(4) {
+  animation-delay: 0;
+  animation-name: bannerFadeInOut;
+animation-timing-function: ease-in-out;
+animation-iteration-count: infinite;
+animation-duration: 12s;
+}
+/*Starts off all hidded*/
+.first-image{
+	opacity: 0;
+}
+.second-image{
+	opacity: 0;
+}
+.third-image{
+	opacity: 0;
+}
+.fourth-image{
+	opacity: 0;
 }
 /*---------------Content Area-----------------*/
 #content{
 	display: inherit;
 	flex-direction: column;
-	flex: 1 600px;
 	overflow: auto;
-	align-items: center;
+	margin: 0% 10%;
+    
+    
 	
 }
+/*-----------bottom below nav area and before sponsors-------------------*/
+#belowBannerArea{
+	 display: inherit;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-self: center;
+    width: 100%
+    
+    
+     
+}
+#LSarea img{
+    border-radius: 50%;
+    background-color: olivedrab;
+    
+}
+#insideBanAreaRS{
+    display: inherit;
+    flex: 1;
+    flex-direction: column;
+    flex-wrap: wrap;
+    
+}
+#insideBanAreaRS img{
+    background-color: olivedrab;
+}
+.sideArea{
+    display: inherit;
+    flex-direction: row;
+    flex: 1;
+    align-items: center;
+    
+    
+}
+#LSarea{
+    display: inherit;
+    flex-direction: column;
+    flex: 1px;
+    align-items: center;
+    
+    
+}
+
+#LSarea a{
+    align-self: flex-end;
+}
+#LSarea p{
+    display: inherit;
+    width: 600px
+}
+/*--------------Sponsors---------------------*/
+#sponsors{ 
+    display: inherit;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 1;
+    align-content: center;
+    
+    
+    
+   
+}
+.sponsors{
+    display: inherit;
+    flex-wrap: nowrap;
+    
+    
+    
+}
+#group1sponsors{
+    justify-content: space-between;
+    flex: 1;
+    
+}
+#group2sponsors{
+    justify-content: space-between;
+    flex: 1;
+}
+
+/*----------------Testimonies-------------*/
+#testimony{
+    display: inherit;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    flex: 1;
+    align-self: center;
+    
+    
+    
+}
+
+.testimonies{
+    margin: 0% 10px;  
+}
+.testimonies img{
+    background-color: olivedrab;
+    
+}
+.testimonies h2{
+    margin: 0px;
+}
+.testimonies p{
+    margin: 0px;
+}
+
 /*--------------Footer Section----------------*/
 footer{
 	display: inherit;
 	flex-direction: column;
 	background: skyblue;
+    padding: 0% 10%;
 	
 }
 #footCont{
@@ -153,20 +349,5 @@ footer{
 	flex-direction: row;
 	justify-content: space-between;
 }
-/*-------------------images---------------------*/
 
-
-img.one {
- height: 25%;
-    width: 110%;
-
-}
-
-
-
-/*twitter logo please edit it in flex box*/
-img.two {
- height: 4%;
-    width: 4%;
-
-}
+/* npowerblue #37b8eb*/
