--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,13 @@ body {
 	margin: 0;
 }
 /*----------------Container Section---------------*/
-.container{
+#container{
 	display: flex;
     display: -ms-flex;
     display: -webkit-flex;
 	flex-direction: column;
+    position:relative;
+    top:300px;
 	/*vh is the viewport which is the browser window size*/
 	/*this makes the container 100% of the window*/
 	min-height: 100vh; 
@@ -18,11 +20,14 @@ body {
 /*-------------------Top Area---------------------*/
 #toparea{
 	display: inherit;
+    position:fixed;
+    width:90%;
+    z-index:1;
 	/*space-between, spaces the elements apart equally, in this case the logo and the social media*/
 	justify-content: space-between;
 	flex-wrap: wrap;
 	background: skyblue;
-    padding: 0% 10%
+    padding: 1% 5% 2%;
 }
 #socialMedia{
 	
@@ -37,7 +42,7 @@ nav{
 	display:none;
 }
 
-.nav ul{
+ul{
   /*Makes it a flexchild*/
     display:  inherit;
 	
@@ -49,13 +54,13 @@ nav{
 	
   
 }
-.nav li{
+li{
 	display:inline;
 	margin-left:5%;
 	
 }
 
-.nav li a{
+li a{
  	text-decoration: none;
 	display: inherit;
     padding: 15px;
@@ -66,19 +71,19 @@ nav{
 	
 }
 
-.nav li a:hover{
+li a:hover{
 	color: yellow;
 }
-.nav li a:active{
+li a:active{
   color:red;
 }
-.nav li a:link{
+li a:link{
   color:black;
 }
 
 @media screen and (max-width: 1050px){/*this setting is for my screen*/
 	#horizontalNav{
-		display: none; 
+		display: none;        
 	}
 	.dropbtn {
 		background-color: #4CAF50;
@@ -147,7 +152,7 @@ nav{
 #banner {
   position:relative;
   height:281px;
-  width:450px;
+  width:1050px;
   margin:0 auto;
 }
 
@@ -224,7 +229,7 @@ animation-duration: 12s;
 	opacity: 0;
 }
 /*---------------Content Area-----------------*/
-.content{
+#content{
 	display: inherit;
 	flex-direction: column;
 	overflow: auto;
@@ -391,8 +396,7 @@ footer{
 	display: inherit;
 	flex-direction: column;
 	background: skyblue;
-    padding: 0% 10%;
-	margin:0px;
+    padding: 1% 5%;
 	flex: 1;
 	
 }
@@ -400,54 +404,71 @@ footer{
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+   
 }
 footer p{
 	margin:0px;
 }
 /* npowerblue #37b8eb*/
-/*-------------------OurPrograms--------------------*/
 
-#OPcontent{
-	display: inherit;
-	
-	flex-direction: row;
-	justify-content: space-between;
-	
-}
-#OPcontent article{
-	display: inherit;
-	flex-direction: column;
-	
+#donateRect {
+    x:5px;
+    y:8px;
+    rx: 10px;
+    ry: 10px;
+    fill: #f4ef5a;
+    stroke: black;
+    stroke-width: 3px;
+ 
+    
 }
 
-/*----------------------Application Page--------------*/
-p#slideControls {
-  text-align:center;
-}
-#slideControls span {
-  padding-right:2em;
-  cursor:pointer;
-}
-#slideApp {
-  position:relative;
-  height:281px;
-  width:450px;
-  margin:0 auto 10px;
-}
-#slideApp div {
-  position:absolute;
-  left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
-  opacity:0;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0);
+
+
+#socIcon {
+height:40px;
+border-radius: 7px;
+padding: 0px 1px;    
 }
 
-#slideApp div.opaque {
-  opacity:1;
-  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: alpha(opacity=1);
+#donateText {
+    font-weight: bold;
+    font-size:20px;
+    font-family:Tahoma, Arial;
+}
+
+#slogan {
+    font-family: Century Gothic;
+    font-size:18px;
+    margin: -10px 0px 0px 210px;
+}
+
+
+
+#navButton {
+    font-family: Trebuchet MS;
+    font-weight: bold;
+    padding: 15px;
+    background:red;
+}
+
+
+
+
+
+
+
+#donateIcon {
+    width:130px;
+    height:65px;
+}
+
+a.footLinks {
+    text-decoration: none;
+}
+
+#testfixed {
+    position:fixed;
+    width:100%;
+    z-index:1;
 }
