Updated css with fixed top area

--- a/css/style.css
+++ b/css/style.css
@@ -6,79 +6,77 @@ body {
 /*----------------Container Section---------------*/
 #container{
 	display: flex;
-    display: -ms-flex;
-    display: -webkit-flex;
+	display: -ms-flex;
+	display: -webkit-flex;
 	flex-direction: column;
-    position:relative;
-    top:300px;
 	/*vh is the viewport which is the browser window size*/
 	/*this makes the container 100% of the window*/
 	min-height: 100vh; 
-	
-	
 }
 /*-------------------Top Area---------------------*/
 #toparea{
-	display: inherit;
-    position:fixed;
-    width:90%;
-    z-index:1;
-	/*space-between, spaces the elements apart equally, in this case the logo and the social media*/
-	justify-content: space-between;
-	flex-wrap: wrap;
+	display: inline-block;
 	background: skyblue;
-    padding: 1% 5% 2%;
+	width: 100%;
+	position: fixed;
+	z-index: 1;
 }
-#socialMedia{
-	
+#logoAndSocialMedia{
+	z-index:1;
+	padding: 0% 10%;
+	margin: 0;
 }
-	
+.socialMedia{
+	bottom: 85px;
+	position: relative;
+	left: 65% ;
+}
+@media screen and (max-width: 1050px){/*this setting is for my screen*/
+    .socialMedia{
+        position: static;       
+    }
+}	
 /*---------------Navigation Section----------------*/
 
 nav{
+	display: inline;
+	width: 100%;
 	background:skyblue;
+	position: relative;
+	padding: 0px;
+	margin: 0px;
 }
 .dropdown{
 	display:none;
 }
 
-ul{
-  /*Makes it a flexchild*/
-    display:  inherit;
-	
-	flex-wrap: wrap;
-	overflow: hidden;
-	list-style-type: none;
-	
-	flex-direction: row;
-	
-  
+nav ul{
+  display: flex;
+    flex: 1;
 }
-li{
+nav li{
 	display:inline;
-	margin-left:5%;
+	padding: 0px 4%;
 	
 }
 
-li a{
- 	text-decoration: none;
+nav li a{
+	 text-decoration: none;
 	display: inherit;
-    padding: 15px;
-    /* border: 1px solid black; */
-    list-style-type:  none;
+	padding: 15px;
+	/* border: 1px solid black; */
+	list-style-type:  none;
 	text-align: center;
-	
-	
 }
 
-li a:hover{
+nav li a:hover{
 	color: yellow;
 }
-li a:active{
-  color:red;
+nav li a:active{
+	color:red;
 }
-li a:link{
-  color:black;
+nav li a:link{
+	color:black;
 }
 
 @media screen and (max-width: 1050px){/*this setting is for my screen*/
@@ -150,70 +148,71 @@ li a:link{
 
 
 #banner {
-  position:relative;
-  height:281px;
-  width:1050px;
-  margin:0 auto;
+	position: relative;
+	padding-top: 275px;
+	height:281px;
+	width:1050px;
+	margin:0 auto;
 }
 
 #banner img {
-  position:absolute;
-  border-radius: 50%;
-  left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+	position:absolute;
+	border-radius: 50%;
+	left:0;
+	-webkit-transition: opacity 1s ease-in-out;
+	-moz-transition: opacity 1s ease-in-out;
+	-o-transition: opacity 1s ease-in-out;
+	transition: opacity 1s ease-in-out;
 }
 
 /*Timing for the actual fades
 *These percentages are used to start the fading early because it's supposed to last for 12s
 */
 @keyframes bannerFadeInOut {
-  0% {
-    opacity:1;
-  }
-  17% {
-    opacity:1;
-  }
-  25% {
-    opacity:0;
-  }
-  92% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
+	0% {
+	opacity:1;
+	}
+	17% {
+	opacity:1;
+	}
+	25% {
+	opacity:0;
+	}
+	92% {
+	opacity:0;
+	}
+	100% {
+	opacity:1;
+	}
 }
 /*Controls the timing for all the fades, perfectly aligned for 4 images*/
 #banner img:nth-of-type(1) {
-  animation-delay: 9s;
-  animation-name: bannerFadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 12s;
+	animation-delay: 9s;
+	animation-name: bannerFadeInOut;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 12s;
 }
 #banner img:nth-of-type(2) {
-  animation-delay: 6s;
-  animation-name: bannerFadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 12s;
+	animation-delay: 6s;
+	animation-name: bannerFadeInOut;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 12s;
 }
 #banner img:nth-of-type(3) {
-  animation-delay: 3s;
-  animation-name: bannerFadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 12s;
+	animation-delay: 3s;
+	animation-name: bannerFadeInOut;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 12s;
 }
 #banner img:nth-of-type(4) {
-  animation-delay: 0;
-  animation-name: bannerFadeInOut;
-animation-timing-function: ease-in-out;
-animation-iteration-count: infinite;
-animation-duration: 12s;
+	animation-delay: 0;
+	animation-name: bannerFadeInOut;
+	animation-timing-function: ease-in-out;
+	animation-iteration-count: infinite;
+	animation-duration: 12s;
 }
 /*Starts off all hidded*/
 .first-image{
@@ -233,33 +232,26 @@ animation-duration: 12s;
 	display: inherit;
 	flex-direction: column;
 	overflow: auto;
-	margin: 0% 10%;
-    
-    
-	
+	margin: 0% 10%;	
 }
 /*-----------bottom below nav area and before sponsors (Index)-------------------*/
 #belowBannerArea{
-	 display: inherit;
+    display: inherit;
     flex-wrap: wrap;
     justify-content: space-between;
     align-self: center;
-    width: 100%
-    
-    
-     
+    width: 100%;
+    padding: 30px 0px;
 }
 #LSarea img{
     border-radius: 50%;
     background-color: olivedrab;
-    
 }
 #insideBanAreaRS{
     display: inherit;
     flex: 1;
     flex-direction: column;
     flex-wrap: wrap;
-    
 }
 #insideBanAreaRS img{
     background-color: olivedrab;
@@ -269,16 +261,12 @@ animation-duration: 12s;
     flex-direction: row;
     flex: 1;
     align-items: center;
-    
-    
 }
 #LSarea{
     display: inherit;
     flex-direction: column;
-    flex: 1px;
+    flex: 1 400px;
     align-items: center;
-    
-    
 }
 
 #LSarea a{
@@ -293,28 +281,21 @@ animation-duration: 12s;
     display: inherit;
     flex-direction: row;
     flex-wrap: wrap;
-    flex: 1;
     align-content: center;
-    
-    
-    
-   
+    overflow: auto;
+    padding: 20px 0px;
 }
 .sponsors{
     display: inherit;
     flex-wrap: nowrap;
-    
-    
-    
 }
 #group1sponsors{
     justify-content: space-between;
     flex: 1;
-    
 }
 #group2sponsors{
     justify-content: space-between;
-    flex: 1;
+   flex: 1;
 }
 
 /*----------------Testimonies-------------*/
@@ -323,10 +304,7 @@ animation-duration: 12s;
     flex-wrap: wrap;
     justify-content: space-between;
     flex: 1;
-    align-self: center;
-    
-    
-    
+    align-self: center;	
 }
 
 .testimonies{
@@ -342,37 +320,59 @@ animation-duration: 12s;
 .testimonies p{
     margin: 0px;
 }
+@media screen and (max-width: 1050px){/*this setting is for my screen*/
+    #testimony{
+        flex-direction: column;
+        align-self: flex-start;
+        width: 100%;
+    }
+    .testimonies{
+        padding:35px 0px; ;
+        display: inherit;
+        flex-direction: row;
+    }
+    .testimoniesContent{
+        padding: 10px 35px;
+        width: 50%;
+        
+    }
+    #testimony2{
+        flex-direction: row-reverse;
+        padding: 0px 5px;
+    }
+   
+}
 /*--------------------Our Partners CSS-------------------*/
 
 #corporatePartners{
 	display: inherit;
-    flex-wrap: wrap;
-    justify-content: space-between; 
-    align-self: center;
-    width: 100%
+    	flex-wrap: wrap;
+    	justify-content: space-between; 
+    	align-self: center;
+    	width: 100%
 }
 #corporatePartners p{
 	margin-top:0%;
 }
 #corporatePartnersColumn{
 	display: inherit;
-    flex-direction: column;
-    flex: 1;
-    align-items: center;
+    	flex-direction: column;
+    	flex: 1;
+	align-items: center;
 
 }
 #partnersLeft{
-    display: inherit;
-    flex-direction: column;
-    flex: 1 400px;
-    align-items: center;
+    	display: inherit;
+    	flex-direction: column;
+    	flex: 1 400px;
+    	align-items: center;
 }
 
 #partnersRight{
-    display: inherit;
-    flex: 1 400px;
-    flex-direction: column;
-    flex-wrap: wrap;
+    	display: inherit;
+    	flex: 1 400px;
+    	flex-direction: column;
+    	flex-wrap: wrap;
 	align-items: center; 
 }
 .formatTitle{
@@ -396,7 +396,7 @@ footer{
 	display: inherit;
 	flex-direction: column;
 	background: skyblue;
-    padding: 1% 5%;
+	padding: 1% 5%;
 	flex: 1;
 	
 }
@@ -412,63 +412,45 @@ footer p{
 /* npowerblue #37b8eb*/
 
 #donateRect {
-    x:5px;
-    y:8px;
-    rx: 10px;
-    ry: 10px;
-    fill: #f4ef5a;
-    stroke: black;
-    stroke-width: 3px;
- 
-    
+	x:5px;
+	y:8px;
+	rx: 10px;
+	ry: 10px;
+	fill: #f4ef5a;
+	stroke: black;
+	stroke-width: 3px;
 }
 
-
-
 #socIcon {
-height:40px;
-border-radius: 7px;
-padding: 0px 1px;    
+	height:40px;
+	border-radius: 7px;
+	padding: 0px 1px;    
 }
 
 #donateText {
-    font-weight: bold;
-    font-size:20px;
-    font-family:Tahoma, Arial;
+	font-weight: bold;
+	font-size:20px;
+	font-family:Tahoma, Arial;
 }
 
 #slogan {
-    font-family: Century Gothic;
-    font-size:18px;
-    margin: -10px 0px 0px 210px;
+	font-family: Century Gothic;
+	font-size:18px;
+	margin: -10px 0px 0px 210px;
 }
-
-
 
 #navButton {
-    font-family: Trebuchet MS;
-    font-weight: bold;
-    padding: 15px;
-    background:red;
+	font-family: Trebuchet MS;
+	font-weight: bold;
+	padding: 15px;
+	background:skyblue;
 }
 
-
-
-
-
-
-
 #donateIcon {
-    width:130px;
-    height:65px;
+	width:130px;
+	height:65px;
 }
 
 a.footLinks {
-    text-decoration: none;
-}
-
-#testfixed {
-    position:fixed;
-    width:100%;
-    z-index:1;
+	text-decoration: none;
 }
