--- a/css/partners.css
+++ b/css/partners.css
@@ -1,7 +1,7 @@
 /*--------------------Our Partners CSS-------------------*/
 
 #corporatePartners{
-	display: inherit;
+	display: flex;
     flex-wrap: wrap;
     justify-content: space-between; 
     align-self: center;
