--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 /*--------------Main Section-------------------*/
+/*
 section{
 	display: inherit;
 	flex: 1;
@@ -8,43 +9,43 @@ section{
 	align-items: center;
 	justify-content: center;
 }
-
+*/
 #banner {
-  position:relative;
-  height:281px;
-  width:450px;
-  margin:0 auto;
+	position:relative;
+	height:281px;
+	width:450px;
+	margin:0 auto;
 }
 
 #banner img {
-  position:absolute;
-  border-radius: 50%;
-  left:0;
-  -webkit-transition: opacity 1s ease-in-out;
-  -moz-transition: opacity 1s ease-in-out;
-  -o-transition: opacity 1s ease-in-out;
-  transition: opacity 1s ease-in-out;
+	position:absolute;
+	border-radius: 50%;
+	left:0;
+	-webkit-transition: opacity 1s ease-in-out;
+	-moz-transition: opacity 1s ease-in-out;
+	-o-transition: opacity 1s ease-in-out;
+	transition: opacity 1s ease-in-out;
 }
 
 /*Timing for the actual fades
 *These percentages are used to start the fading early because it's supposed to last for 12s
 */
 @keyframes bannerFadeInOut {
-  0% {
-    opacity:1;
-  }
-  17% {
-    opacity:1;
-  }
-  25% {
-    opacity:0;
-  }
-  92% {
-    opacity:0;
-  }
-  100% {
-    opacity:1;
-  }
+	0% {
+		opacity:1;
+	}
+	17% {
+		opacity:1;
+	}
+	25% {
+		opacity:0;
+	}
+	92% {
+		opacity:0;
+	}
+	100% {
+		opacity:1;
+  	}
 }
 /*Controls the timing for all the fades, perfectly aligned for 4 images*/
 #banner img:nth-of-type(1) {
@@ -92,112 +93,113 @@ animation-duration: 12s;
 #content{
 	display: inherit;
 	flex-direction: column;
-	flex: 1 600px;
 	overflow: auto;
-	align-items: center;
-	
+	margin: 0% 10%;
 }
 /*-----------bottom below nav area and before sponsors (Index)-------------------*/
 #belowBannerArea{
-	 display: inherit;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-self: center;
-    width: 100%
-    
-    
-     
+	display: inherit;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-self: center;
+	width: 100%;
+	padding: 30px 0px;
 }
 #LSarea img{
-    border-radius: 50%;
-    background-color: olivedrab;
-    
+	border-radius: 50%;
+	background-color: olivedrab;
 }
 #insideBanAreaRS{
-    display: inherit;
-    flex: 1;
-    flex-direction: column;
-    flex-wrap: wrap;
-    
+	display: inherit;
+	flex: 1;
+	flex-direction: column;
+	flex-wrap: wrap;
 }
 #insideBanAreaRS img{
-    background-color: olivedrab;
+	background-color: olivedrab;
 }
 .sideArea{
-    display: inherit;
-    flex-direction: row;
-    flex: 1;
-    align-items: center;
-    
-    
+	display: inherit;
+	flex-direction: row;
+	flex: 1;
+	align-items: center;
 }
 #LSarea{
-    display: inherit;
-    flex-direction: column;
-    flex: 1px;
-    align-items: center;
-    
-    
+	display: inherit;
+	flex-direction: column;
+	flex: 1 400px;
+	align-items: center;
 }
 
 #LSarea a{
-    align-self: flex-end;
+	align-self: flex-end;
 }
 #LSarea p{
-    display: inherit;
-    width: 600px
+	display: inherit;
+	width: 600px
 }
 /*--------------Sponsors---------------------*/
 #sponsors{ 
-    display: inherit;
-    flex-direction: row;
-    flex-wrap: wrap;
-    flex: 1;
-    align-content: center;
-    
-    
-    
-   
-}
+	display: inherit;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-content: center;
+	overflow: auto;
+	padding: 20px 0px;
+ }
 .sponsors{
-    display: inherit;
-    flex-wrap: nowrap;
-    
-    
-    
+	display: inherit;
+	flex-wrap: nowrap;
 }
 #group1sponsors{
-    justify-content: space-between;
-    flex: 1;
-    
+	justify-content: space-between;
+	flex: 1;
 }
 #group2sponsors{
-    justify-content: space-between;
-    flex: 1;
+	justify-content: space-between;
+	flex: 1;
 }
 
 /*----------------Testimonies-------------*/
 #testimony{
-    display: inherit;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    flex: 1;
-    align-self: center;
-    
-    
-    
+	display: inherit;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	flex: 1;
+	align-self: center;
 }
 
 .testimonies{
-    margin: 0% 10px;  
+	margin: 0% 10px;  
 }
 .testimonies img{
-    background-color: olivedrab;
+	background-color: olivedrab;
     
 }
 .testimonies h2{
-    margin: 0px;
+	margin: 0px;
 }
 .testimonies p{
-    margin: 0px;
+	margin: 0px;
+}
+@media screen and (max-width: 1050px){/*this setting is for my screen*/
+	#testimony{
+	        flex-direction: column;
+	        align-self: flex-start;
+	        width: 100%;
+	}
+    	.testimonies{
+	        padding:35px 0px; ;
+	        display: inherit;
+	        flex-direction: row;
+	}
+    	.testimoniesContent{
+		padding: 10px 35px;
+		width: 50%;
+	}
+	#testimony2{
+		flex-direction: row-reverse;
+		padding: 0px 5px;
+	}
+   
 }
